[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
regex = "1"
structopt = "0.3"
petgraph = "0.6.0"

[profile.release]
lto = "fat"
codegen-units = 1
